Add xcbeautify for better CI output and fix concurrency safety

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Build
-      run: xcodebuild build -scheme Miso -configuration Debug
+      run: xcodebuild build -scheme Miso -configuration Debug | xcbeautify
     
     - name: Test
-      run: xcodebuild test -scheme Miso -configuration Debug -destination 'platform=macOS'
+      run: xcodebuild test -scheme Miso -configuration Debug -destination 'platform=macOS' | xcbeautify
