--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Select Xcode version
+      run: sudo xcode-select -s /Applications/Xcode_16.app/Contents/Developer
+    
     - name: Build
-      run: xcodebuild build -scheme Miso -configuration Debug | xcbeautify
+      run: set -o pipefail && xcodebuild build -scheme Miso -configuration Debug -quiet | xcbeautify
     
     - name: Test
-      run: xcodebuild test -scheme Miso -configuration Debug -destination 'platform=macOS' | xcbeautify
+      run: set -o pipefail && xcodebuild test -scheme Miso -configuration Debug -destination 'platform=macOS' -quiet | xcbeautify
