--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Select Xcode version
-        run: sudo xcode-select -s /Applications/Xcode_16.app/Contents/Developer
+        run: sudo xcode-select -s /Applications/Xcode_26_beta_6.app/Contents/Developer
 
       - name: Build
         run: set -o pipefail && xcodebuild build -scheme Miso -configuration Debug | xcbeautify
